<?xml version="1.0"?>
<package format="3">
  <name>robot_localization_ranges</name>
  <version>0.0.1</version>
  <description>EFK localization with range beacons</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>MIT</license>  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>urdfdom</depend>
  <depend>tf2_ros</depend>
  <depend>anchor_msgs</depend>
  <depend>robot_localization</depend>
  <depend>simple_launch</depend>
  <depend>slider_publisher</depend>
  <depend>navigation2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
