<?xml version="1.0"?>
<package format="3">
  <name>robot_localization_ranges</name>
  <version>0.0.2</version>
  <description>EFK localization with range beacons</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>MIT</license>  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_auto</build_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>diagnostic_updater</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>anchor_msgs</depend>
  <depend>robot_localization</depend>

  <exec_depend>simple_launch</exec_depend>
  <exec_depend>slider_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
